sugar/tests/fail/cut_tyless.mx
|- cut
    { a -> a
    ; b -> b
    }
